Fix gap bewteen posts

--- a/index.css
+++ b/index.css
@@ -37,6 +37,7 @@ main.container {
     margin-top: 2px;
     margin-bottom: 2px;
     padding: 0;
+    gap: 0;
 }
 
 .header-container {
